[emacs] Bind olivetti-mode

--- a/emacs.org
+++ b/emacs.org
@@ -697,7 +697,8 @@ For more information, see ~man 5 hunspell~.
 #+BEGIN_SRC emacs-lisp
   (use-package olivetti
     :straight t
-    :defer t
+    :bind
+    ("C-c a m" . olivetti-mode)           ; [M]argins
     :config
     (setq olivetti-body-width (round (* 80 1.25)))
     :delight)
