[emacs] Rebind cumbersome frame commands

--- a/emacs.org
+++ b/emacs.org
@@ -3197,6 +3197,17 @@ The command ~suspend-frame~ is disorienting. Unbind ~suspend-frame~.
   (unbind-key "C-x C-z")
 #+END_SRC
 
+The default keybindings assume a QWERTY keyboard. Some keybindings are
+cumbersome on a non QWERTY keyboard. Rebind cumbersome frame commands.
+
+#+BEGIN_SRC emacs-lisp
+  (bind-keys
+   ("C-c v m" . make-frame-command)
+   ("C-c v o" . other-frame)
+   ("C-c v d" . delete-frame)
+   ("C-c v C-d" . delete-other-frames))
+#+END_SRC
+
 ** Window settings
 Resize windows pixelwise, not characterwise.
 
@@ -4311,6 +4322,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
       "C-c j" "jump"
       "C-c k" "media"
       "C-c o" "org"
+      "C-c v" "frames"
       "C-c w" "windows"
       "C-c x" "other"
       "C-c z" "system")
