[emacs] Tweak comment

--- a/emacs.org
+++ b/emacs.org
@@ -3487,7 +3487,7 @@ Bury unneeded buffers, computers have more than enough memory.
   With `\\[universal-argument]' prefix argument ARG, reboot
   system."
       (interactive "P")
-      (let ((kill-emacs-hook ; Dynamic variable, restore when kill is aborted
+      (let ((kill-emacs-hook              ; Dynamic variable
              (append kill-emacs-hook
                      (list (if arg #'koek-wm/reboot #'koek-wm/power-off)))))
         (save-buffers-kill-terminal)))
