[emacs] Tweak comment

--- a/emacs.org
+++ b/emacs.org
@@ -4985,7 +4985,7 @@ To show holidays as agenda entries, see [[info:org#Weekly/daily agenda][Calendar
 #+BEGIN_SRC emacs-lisp
   (use-package calendar
     :bind
-    ("C-c x q" . calendar)                ; Qalendar [sic]
+    ("C-c x q" . calendar)                ; [Q]alendar [sic]
     :hook (calendar-today-visible . calendar-mark-today)
     :config
     (setq calendar-mark-holidays-flag t))
