--- a/emacs.org
+++ b/emacs.org
@@ -4241,8 +4241,8 @@ On [[https://devdocs.io/][DevDocs]], enable:
 - Clojure & ClojureScript: Clojure
 - Erlang: Erlang
 - HTML & CSS: HTML and CSS
-- JavaScript: JavaScript, DOM, jQuery, lodash, Node.js, npm and
-  Express
+- JavaScript: JavaScript, DOM, jQuery, lodash, Node.js and Express
+- JSON: npm
 - Octave: Octave
 - Python: Python, NumPy, pandas, StatsModels, scikit-learn,
   scikit-image, TensorFlow and Matplotlib
@@ -5818,7 +5818,6 @@ Configure conf-mode afterwards.
      ("C-c d C-j" . koek-dl/lookup-jquery)
      ("C-c d C-l" . koek-dl/lookup-lodash)
      ("C-c d C-n" . koek-dl/lookup-node)
-     ("C-c d C-p" . koek-dl/lookup-npm)
      ("C-c d C-x" . koek-dl/lookup-express))
 
     ;; Resolve keybinding conflict with eglot
