[emacs] Show indicator when buffer name in mode line is truncated

--- a/emacs.org
+++ b/emacs.org
@@ -6831,7 +6831,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
       "Truncate string S to LENGTH.
   S is a string, the string to truncate.  LENGTH is an integer, the
   maximum length of S."
-      (substring s 0 (min length (length s))))
+      (truncate-string-to-width s length nil nil t))
 
     (defconst koek-ml/id
       '(:eval
