[emacs] Tweak indentation

--- a/emacs.org
+++ b/emacs.org
@@ -6649,7 +6649,8 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
             `(,@koek-ml/dummies " "
               koek-ml/eldoc koek-ml/ace koek-ml/depth
               koek-ml/exwm-workspaces koek-ml/eyebrowse
-              koek-ml/id koek-ml/keycast koek-ml/diff koek-ml/task koek-ml/modes))
+              koek-ml/id koek-ml/keycast
+              koek-ml/diff koek-ml/task koek-ml/modes))
       (force-mode-line-update)
       (dolist (type koek-ml/variant-types)
         (when-let ((buffer (ediff-get-buffer type)))
