--- a/emacs.org
+++ b/emacs.org
@@ -5171,7 +5171,10 @@ Stavrou)]].
      ([remap bongo-dired-insert-enqueue-lines] . koek-bngo/dired-enqueue-next-dwim))
 
     ;; General
-    (setq bongo-enabled-backends '(vlc))
+    (setq bongo-enabled-backends '(mpv))
+    (setq bongo-custom-backend-matchers
+          '((mpv . (local-file "m4a"))
+            (mpv . ("https:" . t))))
     (setq bongo-prefer-library-buffers nil)
     (setq bongo-insert-whole-directory-trees t)
     (setq bongo-join-inserted-tracks nil)
