--- a/emacs.org
+++ b/emacs.org
@@ -423,6 +423,19 @@ VC is a placeholder.
     :config
     (setq magit-diff-refine-hunk t))
 
+  (use-package magit-blame
+    :defer t
+    :config
+    (setq magit-blame-styles
+          '((margin (margin-format    . ("%s%f" "%C %a" "%H" ""))
+                    (margin-width     . 40)
+                    (margin-face      . magit-blame-margin)
+                    (margin-body-face . (magit-blame-dimmed)))
+            (heading (heading-format . "%C %-20a %s\n"))
+            (line (show-message . t)
+                  (show-lines   . t))))
+    (setq magit-blame-echo-style 'line))
+
   (use-package git-commit
     :defer t
     :preface
