--- a/emacs.org
+++ b/emacs.org
@@ -576,7 +576,15 @@ Save auto-save files in =~/.emacs.d/var/auto-save/=.
     (setq avy-all-windows nil)
     (setq avy-all-windows-alt 'all-frames)
     (setq avy-keys '(?q ?s ?d ?f ?j ?k ?l ?m))
-    (setq avy-dispatch-alist nil))
+    (setq avy-dispatch-alist nil)
+    ;; Hints can touch, making it difficult to identify individual ones.
+    ;; Style all hint characters identical except the first one.
+    (setq avy-lead-faces
+          '(avy-lead-face
+            avy-lead-face-1
+            avy-lead-face-1
+            avy-lead-face-1
+            avy-lead-face-1)))
 #+END_SRC
 
 *** link-hint - Jump to visible link
