--- a/emacs.org
+++ b/emacs.org
@@ -207,6 +207,9 @@ For org configuration, see [[*Org][Org]].
 ** exwm - X window manager
 [[https://github.com/ch11ng/exwm][exwm (GitHub)]]
 
+The idea for acquiring the URL of Firefox buffers is from [[https://www.reddit.com/r/emacs/comments/mb8u1m/weekly_tipstricketc_thread/gs55kqw/][Reddit user
+b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper][KeePass Helper]].
+
 #+BEGIN_SRC emacs-lisp
   ;; Prevent exwm from asking to replace window manager after
   ;; installation
@@ -373,6 +376,73 @@ For org configuration, see [[*Org][Org]].
   (use-package exwm-workspace
     :defer t
     :preface
+    (defun koek-wm/classp (class &optional buffer)
+      ;; `exwm-class-name' is the name of the application while
+      ;; `exwm-instance-name' is the name of the instance of the
+      ;; application, see
+      ;; https://www.x.org/releases/X11R7.6/doc/xorg-docs/specs/ICCCM/icccm.html#wm_class_property.
+      (when (boundp 'exwm-class-name)
+        (when-let ((cl
+                    (buffer-local-value
+                     'exwm-class-name (get-buffer (or buffer (current-buffer))))))
+          (let ((case-fold-search t))     ; Dynamic variable
+            (string-match-p (regexp-quote class) cl)))))
+
+    (defun koek-wm/get-firefox-page ()
+      (string-match
+       ;; Mozilla Firefox
+       ;; Mozilla Firefox Private Browsing
+       ;; Mozilla Firefox (Private Browsing)
+       ;; URL - Title — Mozilla Firefox
+       ;; URL - — Mozilla Firefox
+       ;; URL - Title - Mozilla Firefox
+       ;; URL - - Mozilla Firefox
+       ;; URL - Title — Mozilla Firefox Private Browsing
+       ;; URL - — Mozilla Firefox Private Browsing
+       ;; URL - Title — Mozilla Firefox (Private Browsing)
+       ;; URL - — Mozilla Firefox (Private Browsing)
+       ;; URL - Title - Mozilla Firefox (Private Browsing)
+       ;; URL - - Mozilla Firefox (Private Browsing)
+       (rx line-start
+           ;; URL
+           (group-n 1 alpha (zero-or-more (any alnum "+-.")) ":" (minimal-match (zero-or-more not-newline)))
+           ;; Separator
+           " - "
+           ;; Title
+           (zero-or-one (group-n 2 (minimal-match (one-or-more not-newline))))
+           ;; Suffix
+           (zero-or-one " ") (any "-\N{EM DASH}") " Mozilla Firefox" (zero-or-one " " (or "Private Browsing" "(Private Browsing)"))
+           line-end)
+       exwm-title)
+      (list :url (match-string 1 exwm-title) :title (match-string 2 exwm-title)))
+
+    (defun koek-wm/update-current ()
+      (cond
+       ((koek-wm/classp "gimp")
+        (exwm-workspace-rename-buffer "*GIMP*"))
+       ((koek-wm/classp "firefox")
+        (let* ((page (koek-wm/get-firefox-page))
+               (title (plist-get page :title))
+               (url (plist-get page :url))
+               (parsed (url-generic-parse-url url))
+               (scheme (url-type parsed))
+               (id (if (member scheme '("about" "chrome"))
+                       title
+                     (or title url))))
+          (exwm-workspace-rename-buffer
+           (concat "*FF"
+                   (when id
+                     (concat ": " id))
+                   "*"))
+          ;; ibuffer, marginalia
+          (setq list-buffers-directory url)))
+       ((koek-wm/classp "microsoft teams")
+        (exwm-workspace-rename-buffer "*Teams*"))
+       ((koek-wm/classp "vlc")
+        (exwm-workspace-rename-buffer "*VLC*"))
+       (t
+        (exwm-workspace-rename-buffer (format "*%s*" exwm-class-name)))))
+
     (defvar koek-wm/previous-workspace-n nil
       "Previously selected workspace number.")
 
@@ -402,26 +472,6 @@ For org configuration, see [[*Org][Org]].
       (when koek-wm/previous-workspace-n
         (exwm-workspace-switch-create koek-wm/previous-workspace-n)))
 
-    (defun koek-wm/rename-current ()
-      "Rename current according to its class or title."
-      ;; Class is the name of an application while instance is the name
-      ;; of an instance of the application, see
-      ;; https://www.x.org/releases/X11R7.6/doc/xorg-docs/specs/ICCCM/icccm.html#wm_class_property.
-      (exwm-workspace-rename-buffer
-       (cond
-        ((string-prefix-p "gimp" exwm-class-name 'ignore-case)
-         "GIMP")
-        ((string-prefix-p "firefox" exwm-class-name 'ignore-case)
-         (replace-regexp-in-string
-          (rx "Mozilla Firefox" (zero-or-one " (Private Browsing)") line-end)
-          "Firefox" (or exwm-title "Firefox")))
-        ((string-prefix-p "microsoft teams" exwm-class-name 'ignore-case)
-         "Teams")
-        ((string-prefix-p "vlc" exwm-class-name 'ignore-case)
-         "VLC")
-        (t
-         exwm-class-name))))
-
     (defun koek-wm/n-to-label (n)
       "Convert workspace number N to a workspace label.
   N is an integer, a workspace number."
@@ -446,8 +496,7 @@ For org configuration, see [[*Org][Org]].
     (setq exwm-workspace-number 2)
     (setq exwm-workspace-show-all-buffers t)
     (setq exwm-workspace-index-map #'koek-wm/n-to-label)
-    (add-hook 'exwm-update-class-hook #'koek-wm/rename-current)
-    (add-hook 'exwm-update-title-hook #'koek-wm/rename-current))
+    (add-hook 'exwm-update-title-hook #'koek-wm/update-current))
 
   (use-package exwm-layout
     :defer t
@@ -458,7 +507,7 @@ For org configuration, see [[*Org][Org]].
     :defer t
     :config
     (setq exwm-manage-configurations
-          `(((string-prefix-p "firefox" exwm-class-name 'ignore-case)
+          `(((koek-wm/classp "firefox")
              simulation-keys
              ,(mapcar (pcase-lambda (`(,from . ,to))
                         (cons (kbd from) (kbd to)))
@@ -466,9 +515,9 @@ For org configuration, see [[*Org][Org]].
                                 ("M-p" . "S-C-p")
                                 ("M-k" . "C-w"))
                               koek-wm/base-simulation-keys)))
-            ((string-prefix-p "gimp" exwm-class-name 'ignore-case)
+            ((koek-wm/classp "gimp")
              char-mode t floating-mode-line nil)
-            ((string-prefix-p "inkscape" exwm-class-name 'ignore-case)
+            ((koek-wm/classp "inkscape")
              char-mode t floating-mode-line nil))))
 #+END_SRC
 
