[emacs] Prefer basic to caret notation

--- a/emacs.org
+++ b/emacs.org
@@ -612,7 +612,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
   (defun exar--decode-terminated-string (bytes)
     (exar--decode-string
      (seq-take-while (lambda (byte)
-                       (/= byte ?\C-j))
+                       (/= byte ?\n))
                      bytes)))
 
   (defun exar--decode-manufacturer (bytes)
